# services/kepegawaian/modules/tingkatpendidikan/route.go
@@ -12,5 +12,11 @@ func RegisterRoutes(e *echo.Echo, repo repository, mwAuth api.AuthMiddlewareFunc
 	s := newService(repo)
 	h := newHandler(s)
 
-	e.Add(http.MethodGet, "/v1/tingkat-pendidikan", h.list, mwAuth())
+	e.Add(http.MethodGet, "/v1/tingkat-pendidikan", h.listPublic, mwAuth())
+
+	e.Add(http.MethodGet, "/v1/admin/tingkat-pendidikan", h.list, mwAuth(api.RoleAdmin))
+	e.Add(http.MethodGet, "/v1/admin/tingkat-pendidikan/:id", h.get, mwAuth(api.RoleAdmin))
+	e.Add(http.MethodPost, "/v1/admin/tingkat-pendidikan", h.create, mwAuth(api.RoleAdmin))
+	e.Add(http.MethodPut, "/v1/admin/tingkat-pendidikan/:id", h.update, mwAuth(api.RoleAdmin))
+	e.Add(http.MethodDelete, "/v1/admin/tingkat-pendidikan/:id", h.delete, mwAuth(api.RoleAdmin))
 }
